Feature: Add LSP telescope tree treesitter fugitive Feature: Set up Lazy Feature: Set up nvim intialization without local vim tar gz

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,6 @@ services:
     image: devenv
     container_name: devenv
     volumes:
-      - ./project:/project
+      - ./project:/root/project
+      - ./nvim:/root/.config/nvim
     tty: true
