--- a/project-outsourcing/tsconfig.app.json
+++ b/project-outsourcing/tsconfig.app.json
@@ -23,5 +23,13 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
+  // shadcn
+  "baseUrl": ".",
+  "paths": {
+    "@/*": [
+      "./src/*"
+    ]
+  },
+  // end shadcn 
   "include": ["src"]
 }
