--- a/project-outsourcing/components.json
+++ b/project-outsourcing/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "",
-    "css": "src/index.css",
+    "css": "styles/global.css",
     "baseColor": "slate",
     "cssVariables": true,
     "prefix": ""
